<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInputText"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/lightGray"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="end|bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/buttonSeven"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/buttonEight"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/buttonNine"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/buttonDivide"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divide"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/buttonFour"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/buttonFive"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/buttonSix"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/six"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/buttonMultiplication"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/buttonOne"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/one"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/buttonTwo"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/buttonThree"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/buttonMinus"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/buttonZero"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/buttonClr"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clr"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/buttonAdd"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/buttonDot"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/buttonEquals"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equals"
            android:textSize="30sp"
            android:backgroundTint="@color/grey"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>